--- a/src/app/modals/loading-modal/loading-modal.page.scss
+++ b/src/app/modals/loading-modal/loading-modal.page.scss
@@ -36,7 +36,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #ffffff;
+    background-color: #8800FF;
     -webkit-animation: sk-foldCubeAngle-loading 2.4s infinite linear both;
             animation: sk-foldCubeAngle-loading 2.4s infinite linear both;
     -webkit-transform-origin: 100% 100%;
