--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,8 +1,8 @@
 <ion-content class="ionContent">
 
   <div class="divPrimary center">
-    <h1 class="h1Title color-primary text-bold">HumanTech</h1>
-    <img class="imgLogo" src="assets/humantech.png" alt="image logo" />
+    <h1 class="h1Title color-primary text-bold">Geniant</h1>
+    <img class="imgLogo" src="assets/logo.png" alt="image logo" />
 
     <form (ngSubmit)="login()">
       <input class="inputLogin marginTopImg box-shadow" [(ngModel)]="loginData.user" name="user" type="text"
