--- a/src/app/modals/sign-up-modal/sign-up-modal.page.scss
+++ b/src/app/modals/sign-up-modal/sign-up-modal.page.scss
@@ -26,15 +26,25 @@ h2,h3,h4,h5,h6{
       background: rgba(0, 0, 0, 0.3);
   }
 
+  ion-datetime {
+    border-bottom: 1px solid #80f;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    color: #522f71;
+    width: 100%;
+    height: 27px;
+  }
+
   .modal_content {
     display: block;
     position: relative;
     top: 0;
     left: 0;
     right: 0;
-    margin: 30% 0 0% 5%;
+    margin: 20% 0 0% 5%;
     width: 90%;
-    height: 65%;
+    height: 700px;
     z-index: 1;
     color: #333;
     border-radius: 10px;
@@ -49,7 +59,7 @@ h2,h3,h4,h5,h6{
   }
 
   .h1Title{
-    padding: 20% 0 0 7%;
+    padding: 2% 0 0 7%;
   }
 
   .spanAccount{
