--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,7 +5,21 @@
 </ion-header>
 
 <ion-content>
-  <h3>Bearer Token: {{token}}</h3>
+  <ion-refresher slot="fixed" (ionRefresh)="getInit()">
+    <ion-refresher-content
+      pullingIcon="chevron-down-circle-outline"
+      pullingText="arrastra para actualizar"
+      refreshingSpinner="circles"
+      refreshingText="Actualizando...">
+    </ion-refresher-content>
+  </ion-refresher>
+
+  <ion-list>
+    <ion-item *ngFor="let item of list">
+      <ion-label>{{item.nombreModelo}}</ion-label>
+      <ion-label>{{item.nombreMarca}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
 
