add responsive edition

--- a/src/app/modals/sign-up-modal/sign-up-modal.page.html
+++ b/src/app/modals/sign-up-modal/sign-up-modal.page.html
@@ -65,6 +65,9 @@
      <div class="width-100 center">
       <button class="btnLogin color-blank text-bold box-shadow" type="submit" [disabled]="!isDisabled()">Crear Cuenta</button>
      </div>
+     <div class="width-100 center">
+      <button style="margin-top: 5%" class="btnLogin color-blank text-bold box-shadow" (click)="back()">Regresar</button>
+     </div>
      
     </form>
 
