--- a/src/app/modals/sign-up-modal/sign-up-modal.page.scss
+++ b/src/app/modals/sign-up-modal/sign-up-modal.page.scss
@@ -6,25 +6,13 @@ ion-content{
     outline: none;
   }
 
-.main-view {
-    background: transparent !important;
-}
+
 
 h2,h3,h4,h5,h6{
   padding: 0;
   margin: 0;
 }
 
-.overlay {
-    position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-      opacity: -2.5;
-      background: rgba(0, 0, 0, 0.3);
-  }
 
   ion-datetime {
     border-bottom: 1px solid #80f;
@@ -34,24 +22,6 @@ h2,h3,h4,h5,h6{
     color: #522f71;
     width: 100%;
     height: 27px;
-  }
-
-  .modal_content {
-    display: block;
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    margin: 20% 0 0% 5%;
-    width: 90%;
-    height: 700px;
-    z-index: 1;
-    color: #333;
-    border-radius: 10px;
-    box-shadow: 0 2px 3px rgba(51, 51, 51, 0.35);
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
   }
 
   .backgroundColor{
@@ -108,4 +78,65 @@ h2,h3,h4,h5,h6{
 .h4LabelMessage{
   margin-bottom: 8px;
   margin-top: 10px;
+}
+
+@media (max-width: 800px) { 
+  .main-view {
+    background: transparent !important;
+  }
+  
+  .overlay {
+    position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      opacity: -2.5;
+      background: rgba(0, 0, 0, 0.3);
+  }
+
+  .modal_content {
+    display: block;
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 20% 0 0% 5%;
+    width: 90%;
+    height: 700px;
+    z-index: 1;
+    color: #333;
+    border-radius: 10px;
+    box-shadow: 0 2px 3px rgba(51, 51, 51, 0.35);
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+  }
+}
+
+@media (min-width: 800px) { 
+
+  .main-view {
+    background: white;
+  }
+  
+
+  .modal_content {
+    width: 100%;
+    z-index: 1;
+    color: #333;
+  }
+
+  .form {
+    margin-top: 3%;  
+    padding: 0 5%;
+
+  }
+
+  .btnLogin {
+    width: 40%;
+    height: 43px;
+    font-size: 3vw;
+  }
 }
