--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -85,3 +85,31 @@ h1, h2, h3, h4, h5, h6{
     font-size: 15px;
     padding-top: 0px;
 }
+
+@media (min-width: 800px) { 
+    .ionGrid {
+        padding: 10px 30% 0 30%;
+    }
+
+    .btnLogin {
+        width: 40%;
+        margin-top: 30px;
+        height: 50px;
+        font-size: 2vw;
+    }
+
+    .h1Title {
+        font-size: 5vw;
+        margin-top: 10%;
+        display: none;
+    }
+
+    .form {
+        padding: 0 20%;
+    }
+
+    .imgLogo {
+        width: 48%;
+        margin-top: 10%;
+    }
+ }
