--- a/src/global.scss
+++ b/src/global.scss
@@ -118,3 +118,39 @@
     background: transparent !important;
 }
 
+@media (min-width: 800px) { 
+    .text-xsmall {
+        font-size: 2.4vw;
+    }
+
+    .text-small {
+        font-size: 2vw;
+    }
+
+    .text-xxsmall {
+        font-size: 2vw;
+    }
+}
+
+@media only screen and (min-width: 768px) and (min-height: 768px) {
+
+    .sc-ion-modal-md-h {
+        --width: 100%;
+        --height: 100%;
+    }
+
+}
+
+@media only screen and (min-width: 768px) and (min-height: 600px) {
+    .sc-ion-modal-md-h {
+        --width: 100%;
+        --height: 100%;
+        --ion-safe-area-top: 0px;
+        --ion-safe-area-bottom: 0px;
+        --ion-safe-area-right: 0px;
+        --ion-safe-area-left: 0px;
+    }
+
+}
+
+
